--- a/dock.html
+++ b/dock.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Dock</title>
 	<style>
+		body {
+			margin: 0;
+		}
+
 		.menu {
 			position:absolute;
 		 	width:100%;
@@ -23,7 +27,7 @@
 </head>
 <body>
 	<div id="menu" class="menu">
-		<img src="images/1.png" alt="" class="gray"/>
+		<img src="images/1.png" alt="" />
 		<img src="images/2.png" alt="" />
 		<img src="images/3.png" alt="" />
 		<img src="images/4.png" alt="" />
