--- a/dock.html
+++ b/dock.html
@@ -4,26 +4,30 @@
 	<meta charset="UTF-8">
 	<title>Dock</title>
 	<style>
+		body {
+			margin: 0;
+		}
+
 		.menu {
 			position:absolute;
 		 	width:100%;
 		 	bottom:0;
 		 	text-align:center;
-		 }
+		}
 
-		 .gray {
+		.gray {
 			-webkit-filter: grayscale(100%);
 			-moz-filter: grayscale(100%);
 			-ms-filter: grayscale(100%);
 			-o-filter: grayscale(100%);
 			filter: grayscale(100%);
 			filter: gray;
-		 }
+		}
 	</style>
 </head>
 <body>
 	<div id="menu" class="menu">
-		<img src="images/1.png" alt="" class="gray"/>
+		<img src="images/1.png" alt="" />
 		<img src="images/2.png" alt="" />
 		<img src="images/3.png" alt="" />
 		<img src="images/4.png" alt="" />
