解决有时候因为网络导致图片width、

--- a/dock.html
+++ b/dock.html
@@ -42,8 +42,10 @@
 </body>
 <script src="index.js"></script>
 <script>
-	dockEffect({
-		el: 'menu'
-	});
+	window.onload = function() {
+		dockEffect({
+			el: 'menu'
+		});
+	}
 </script>
 </html>
